2004-03-30  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk.defs (gtk_ui_manager_new): is Constructor of
	GtkUIManager, not GtkUiManager.

	* gtk/gtk.override (_wrap_gtk_action_group_add_actions): Impl

2004-03-28  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* gtk/gtk-types.defs: Fixes #138476 . Added the Layout class 
	(Patch from scottt)

2004-03-29  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk.override (_wrap_gtk_file_chooser_dialog_new): Add
	backend as fifth argument
	(_wrap_gtk_progress_bar_new_with_adjustment): Fix constructor, it
	should return an int, not a PyObject.

	* gtk/gtk.defs: Remove GtkText, GtkTree and GtkTreeItem.

	* gtk/gtktreeview.override (_wrap_gtk_list_store_set): Impl.

	* gtk/gtk.override (_wrap_gtk_button_get_alignment): Impl.
	(_wrap_gtk_ui_manager_get_toplevels): Impl.

2004-03-28  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk.override (_wrap_gtk_file_chooser_dialog_new): Impl,
	based on gtk_dialog_new

	* Makefile.am: Add example to EXTRA_DIST

	* examples/gtk/filechooser.py (filter): New example

2004-03-28  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* gtk/gtk.defs: Updated to match gtk 2.4 API.

2004-03-28  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk-types.defs (TreeModelFilter): implements
	GtkTreeModel and GtkTreeDragSource
	(FileFilter): Add
	(FileChooserDialog): implements GtkFileChooser
	(FileChooser): Add.

	* gtk/gdk.defs, gtk/gdk.defs: Merge in some changes from 2.4.

	* gtk/gtk-types.defs: Gtk+ 2.4 API and remove GtkTextLayout (which
	was accidentally added)

	* configure.in: Require glib 2.4, gtk+ 2.4 and libglade 2.3.6.

	* codegen/h2def.py: Add a new option to be able to separate
	output of objects and functions

	* gtk/gtk-types.defs: Sort and remove ifdef HAVE_GTK24 for 
	GtkTextSearchFlags

	* gtk/gtk.override: Remove unneedded ignore statement

	* gtk/pygtkcellrenderer.h: Cleanup 

	* gtk/pygtktreemodel.h: Ditto

	* gtk/gtktreeview.override: Add a prototype for
	pygtk_cell_data_func_marshal
