@@ -1,5 +1,12 @@
 2004-03-30  Johan Dahlin  <johan@gnome.org>
 
+	* examples/gtk/filechooser.py (response): Updated, call dialog.destroy()
+
+	* examples/gtk/uimanager.py: New example
+
+	* gtk/gtk.override (_wrap_gtk_ui_manager_add_ui_from_string):
+	Override, get rid of second argument.
+
 	* gtk/gtk.defs (gtk_ui_manager_new): is Constructor of
 	GtkUIManager, not GtkUiManager.
 
